task1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: task1
spec:
  rules:
  - host: pocketlaw.com
    http:
      paths:
      - backend:
          service:
            name: task1-service
            port:
              number: 80
        path: /task
        pathType: Exact
  tls:
  - hosts:
    - pocketlaw.com
    secretName: pocketlaw-certs
status:
  loadBalancer: {}
